一出显示引入misc包